fix JDK7 error